image upload legal section

--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
                     <!-- card -->
                     <div class="border-b border-r-0 lg:border-r border-[#E7E7E7]">
                         <div class="group card rounded-none bg-white p-4 lg:p-16 transition-all duration-300 ease-in-out border border-transparent hover:border-[#E7E7E7]  hover:bg-gradient-to-b hover:from-[#F3F3F3] hover:to-[#f3f3f31a] ">
-                            <figure><img src="images/business.png" alt="" /></figure>
+                            <figure><img src="images/criminal.png" alt="" /></figure>
                             <div class=" text-center space-y-6 mt-8">
-                              <h2 class="text-heading-color text-3xl font-extrabold font-garamond">Business Law</h2>
+                              <h2 class="text-heading-color text-3xl font-extrabold font-garamond">Criminal Law</h2>
                               <p class="text-base font-normal text-pera-color font-poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
                               <div class="card-actions justify-center">
                                 <button class="btn bg-btn-color rounded-full text-white">
@@ -146,9 +146,9 @@
                     <!-- card -->
                     <div class="border-b border-[#E7E7E7]">
                         <div class="group card rounded-none bg-white p-4 lg:p-16 transition-all duration-300 ease-in-out border border-transparent hover:border-[#E7E7E7]  hover:bg-gradient-to-b hover:from-[#F3F3F3] hover:to-[#f3f3f31a] ">
-                            <figure><img src="images/business.png" alt="" /></figure>
+                            <figure><img src="images/child.png" alt="" /></figure>
                             <div class=" text-center space-y-6 mt-8">
-                              <h2 class="text-heading-color text-3xl font-extrabold font-garamond">Business Law</h2>
+                              <h2 class="text-heading-color text-3xl font-extrabold font-garamond">Child Support</h2>
                               <p class="text-base font-normal text-pera-color font-poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
                               <div class="card-actions justify-center">
                                 <button class="btn bg-btn-color rounded-full text-white">
@@ -163,9 +163,9 @@
                     <!-- card -->
                     <div class="border-b lg:border-b-0 border-r-0 lg:border-r border-[#E7E7E7]">
                         <div class="group card rounded-none bg-white p-4 lg:p-16 transition-all duration-300 ease-in-out border border-transparent hover:border-[#E7E7E7]  hover:bg-gradient-to-b hover:from-[#F3F3F3] hover:to-[#f3f3f31a] ">
-                            <figure><img src="images/business.png" alt="" /></figure>
+                            <figure><img src="images/education.png" alt="" /></figure>
                             <div class=" text-center space-y-6 mt-8">
-                              <h2 class="text-heading-color text-3xl font-extrabold font-garamond">Business Law</h2>
+                              <h2 class="text-heading-color text-3xl font-extrabold font-garamond">Education Law</h2>
                               <p class="text-base font-normal text-pera-color font-poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
                               <div class="card-actions justify-center">
                                 <button class="btn bg-btn-color rounded-full text-white">
@@ -179,9 +179,9 @@
                     <!-- card -->
                     <div class="border-b lg:border-b-0 border-r-0 lg:border-r border-[#E7E7E7]">
                         <div class="group card rounded-none bg-white p-4 lg:p-16 transition-all duration-300 ease-in-out border border-transparent hover:border-[#E7E7E7]  hover:bg-gradient-to-b hover:from-[#F3F3F3] hover:to-[#f3f3f31a] ">
-                            <figure><img src="images/business.png" alt="" /></figure>
+                            <figure><img src="images/divorce.png" alt="" /></figure>
                             <div class=" text-center space-y-6 mt-8">
-                              <h2 class="text-heading-color text-3xl font-extrabold font-garamond">Business Law</h2>
+                              <h2 class="text-heading-color text-3xl font-extrabold font-garamond">Divorce Law</h2>
                               <p class="text-base font-normal text-pera-color font-poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
                               <div class="card-actions justify-center">
                                 <button class="btn bg-btn-color rounded-full text-white">
@@ -196,9 +196,9 @@
                     <!-- card -->
                     <div class="border-b-0 md:border-b lg:border-b-0 border-[#E7E7E7]">
                         <div class="group card rounded-none bg-white p-4 lg:p-16 transition-all duration-300 ease-in-out border border-transparent hover:border-[#E7E7E7]  hover:bg-gradient-to-b hover:from-[#F3F3F3] hover:to-[#f3f3f31a] ">
-                            <figure><img src="images/business.png" alt="" /></figure>
+                            <figure><img src="images/tax.png" alt="" /></figure>
                             <div class=" text-center space-y-6 mt-8">
-                              <h2 class="text-heading-color text-3xl font-extrabold font-garamond">Business Law</h2>
+                              <h2 class="text-heading-color text-3xl font-extrabold font-garamond">Tax Law</h2>
                               <p class="text-base font-normal text-pera-color font-poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
                               <div class="card-actions justify-center">
                                 <button class="btn bg-btn-color rounded-full text-white">
